--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -654,6 +654,26 @@ section {
   text-decoration: none;
 }
 
+.column-ig {
+  float: left;
+  width: 25%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row-ig::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+img.photogrid {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
