--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -409,7 +409,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/finance.png") top center;
+  background: url("../img/proffnitt1.png") top center;
   background-size: cover;
   position: relative;
 }
